--- a/css/settings.css
+++ b/css/settings.css
@@ -1,67 +1,59 @@
-#scene-settings{
-    padding: 0 1rem 2rem;
-    display: flex; 
-    flex-direction: column;
-  }
-  #scene-settings .head-settings{
-      text-align: center;
-      padding: 1rem;
-      background: #151921;
-      Z-INDEX: 1;
-      margin: 0;
-  }
-  #scene-settings .settings-container{
-      flex-basis: 100%;
-      display: flex;
-      padding-top: .5rem;
-      height: 90%;
-  }
-  #scene-settings  .settings-container .div-icon{
-      display: flex;
-      flex-direction: column;
-      font-size: x-large;
-      height: 100%;
-      flex-basis: 100%;
-  
-  }
-  #scene-settings .div-icon .settings-menu{
-      transition: .3s;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-basis: 100%;
-      padding: .5rem;
-      margin-left: 5px;
-  }
-  #scene-settings i{
-      width: 50px;
-  }
-  #scene-settings span{
-      margin-left: 3px;
-  }
-  #scene-settings .div-icon .focus{
-      border: 3px solid white;
-  }
-  #scene-settings .settings-container .div-lang{
-      transition: .3s;
-      display: flex;
-      flex-direction: column;
-      font-size: 25px;
-      text-align: center;
-      width: 0;
-      flex-basis: 0;
-  }
-  #scene-settings .settings-container .div-lang .settings_language label{
-    padding: 1rem;
+#scene-settings {
+  padding: 0 1rem 2rem;
+  display: flex;
+  flex-direction: column;
 }
-  #scene-settings .settings-container .div-lang .focus{
-      background-color: white;
-      color: #151921;
-  }
-  .iw{
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: rgba(12, 22, 151, 0.5);
-      z-index: 11;
-  }
+#scene-settings .head-settings {
+  text-align: center;
+  padding: 1rem;
+  background: #151921;
+  z-index: 1;
+  margin: 0;
+}
+#scene-settings .settings-container {
+  flex-basis: 100%;
+  display: flex;
+  padding-top: 0.5rem;
+  height: 90%;
+}
+#scene-settings .settings-container .div-icon {
+  display: flex;
+  flex-direction: column;
+  font-size: x-large;
+  height: 100%;
+  flex-basis: 100%;
+}
+#scene-settings .div-icon .settings-menu {
+  transition: 0.3s;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: 100%;
+  padding: 0.5rem;
+  margin-left: 5px;
+}
+#scene-settings i {
+  width: 50px;
+}
+#scene-settings span {
+  margin-left: 3px;
+}
+#scene-settings .div-icon .focus {
+  border: 3px solid white;
+}
+#scene-settings .settings-container .div-lang {
+  transition: all 0.3s , flex-basis 0s;
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+  text-align: center;
+  width: 0;
+  flex-basis: 0;
+}
+#scene-settings .settings-container .div-lang .settings_language label {
+  padding: 1rem;
+}
+#scene-settings .settings-container .div-lang .focus {
+  background-color: white;
+  color: #151921;
+}
