--- a/css/keyboard.css
+++ b/css/keyboard.css
@@ -66,12 +66,11 @@
 /* keyboard */
 .keyboard-content {
 	position: absolute;
-	left: 40px;
-	z-index: 1000;
-	width: 1200px;
+	top: calc(2 * 40px + 3rem);
+    left: 4rem;
+	z-index: 1;
+	width: 336px;
 	height: 225px;
-	background: rgba(80, 80, 80, 0.85);
-	padding: 5px 10px 5px 5px;
 	font-family: sans-serif;
 	font-weight: normal;
 }
@@ -79,15 +78,15 @@
 	.keyboard-content .line {
 		width: 100%;
 		height: 50px;
-		padding: 0 5px 5px 0;
 		line-height: 50px;
+		padding-bottom: 5rpx ;
 	}
 
 		.keyboard-content .line .key {
 			display: inline-block;
 			text-align: center;
 			color: white;
-			padding: 5px 0 5px 5px;
+			padding: 5px .5rem 5px 0;
 			vertical-align: top;
 			box-sizing: border-box;
 		}
@@ -220,16 +219,4 @@
 .keyboard-content .line .key.focus .GEAR {
 	background: #afdeff url('../img/keyboard/gear-active.png') no-repeat;
 	background-position: center center;
-}
-
-.keyboard-cover {
-	width: 1280px;
-	height: 720px;
-	background: rgba(0,0,0,0.1);
-	position: absolute;
-	z-index: 999;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
 }
