--- a/css/main.css
+++ b/css/main.css
@@ -75,20 +75,11 @@ body {
 	background-color: rgb(19, 20, 22);
 	opacity: 0.7;
 }
-.header{
-    background-color: #151921;
-    position: absolute;
-    top: 0;
-    left: 4rem;
-    width: calc(100% - 4rem);
-    height: 50%;
-    z-index: 1;
-}
 #trailer{
     position: absolute;
     top: 0;
     right: 0;
-    height: 50vh;
+    height: 58vh;
     z-index: 1;
 }
 #trailer>div{
@@ -96,21 +87,31 @@ body {
     z-index: 1;
     width: 100%;
     height: 100%;
-    box-shadow:inset 15px -15px 12px rgba(21,25,33, 0.6)
+    box-shadow:inset 67px -40px 40px rgba(21,25,33, 0.9);
 }
- #trailer img{
+ #trailer img, #trailer iframe{
     height: 100%;
 	border-radius: 0 0 0 0.75rem;
 }
-.header #filmName{
-	margin-top: 2rem;
+#trailer iframe{width: 750px;display: none;}
+.header{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 4rem;
+    width: calc(100% - 4rem);
+    height: 50%;
 }
 .header .underHeader{
 	margin: 0.25rem 0;
 }
 .header #filmDescription{
 	text-align: justify;
-    max-width: 46%;
+    max-width: 44%;
+	z-index: 11;
 }
 #snippet-movie-list ,#snippet-series-list {
 	transition: .3s;
@@ -119,9 +120,11 @@ body {
 	width: calc( 100vw - 4rem);
 	margin-left: 4rem;
 	margin-bottom: 1.25rem;
+	z-index: 1;
 }
 #snippet-movie-list .items,#snippet-series-list .items{
 	margin-bottom: 1rem;
+	transition: .3s;
 }
 #snippet-movie-list .items ul,#snippet-series-list .items ul{
 	transition: .3s;
