--- a/css/player.css
+++ b/css/player.css
@@ -1,16 +1,19 @@
 #snippet-player {
-    position: fixed;
-    max-width: 100vw;
-    max-height: 100vh;
-    min-width: 100%;
-    min-height: 100%;
+    transition: .3s;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: 102;
+    opacity: 0;
 }
 
 .player {
+    position: absolute;
     display: inline;
     opacity: 0;
-    transition: all .5s, opacity 0.5s;
+    transition: all 1s, opacity 0.1s;
     z-index: 101;
     right: 0 !important;
     height: 58vh ;
