--- a/css/serie-episodes.css
+++ b/css/serie-episodes.css
@@ -1,33 +1,31 @@
-.show_details{
+#scene-serie #snippet-serie-episodes{
+    min-width: 240px !important;
     background-color: rgb(37,47,71);
-    z-index: 2 !important;
-    min-width: 200px !important;
-    width: unset !important;
-    height: unset !important;
+    z-index: 2;
+    position: absolute;
     border-radius: 5px;
+    top: 25vh;
     font-size: large;
 }
-.show_details h6{
+#scene-serie #snippet-serie-episodes h6{
     text-align: center;
     padding: .5rem 0;
     font-size: large;
     background-color: rgb(159,12,51);
     border-radius: 5px;
-    width: 100%;
 }
-.show_details ul{
+#scene-serie #snippet-serie-episodes ul{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0;
 }
-.show_details ul li{
-    padding: .25rem 0;
+#scene-serie #snippet-serie-episodes ul li{
+    padding: .25rem .75rem;
     width: 100%;
-    text-align: center;
+    
 }
-.show_details ul li.focus{
+#scene-serie #snippet-serie-episodes ul li.focus{
     background-color: white;
     color: rgb(37,47,71);
-    font-weight: 600;
 }
