--- a/css/player.css
+++ b/css/player.css
@@ -11,10 +11,10 @@
 
 .player {
     position: absolute;
-    display: inline;
+    display: none;
     opacity: 0;
     transition: all 1s, opacity 0.1s;
-    z-index: 101;
+    z-index: 10000000;
     right: 0 !important;
     height: 58vh ;
     width: 58vw;
