--- a/css/player.css
+++ b/css/player.css
@@ -1,5 +1,5 @@
 #snippet-player {
-    transition: .3s;
+    transition: 0.3s;
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -11,15 +11,15 @@
 
 .player {
     position: absolute;
-    display: none;
+    display: inline;
     opacity: 0;
     transition: all 1s, opacity 0.1s;
-    z-index: 10000000;
+    z-index: 101;
     right: 0 !important;
-    height: 58vh ;
+    height: 58vh;
     width: 58vw;
-    top: 0  !important;
-    left: unset  !important;
+    top: 0 !important;
+    left: unset !important;
     background-color: black;
 }
 
@@ -38,7 +38,7 @@
     margin-right: 20px;
 }
 #snippet-player #vid-Title {
-    transition: .3s;
+    transition: 0.3s;
     font-size: x-large;
     position: fixed;
     top: 40px;
@@ -64,7 +64,9 @@
     width: 80%;
     align-items: center;
 }
-#snippet-player #controles{transition: .3s;}
+#snippet-player #controles {
+    transition: 0.3s;
+}
 #snippet-player #controles .focus {
     color: red;
 }
@@ -82,9 +84,9 @@
     height: 4px;
     background-color: red !important;
 }
-
-#snippet-player #real-time::after{
-    content: '';
+/*
+#snippet-player #real-time::after {
+    content: "";
     top: -4px;
     right: -7px;
     position: absolute;
@@ -93,7 +95,7 @@
     border: 1px solid white;
     border-radius: 50%;
     background-color: red;
-}
+}*/
 
 #snippet-player .down {
     margin-right: 5px;
@@ -135,13 +137,16 @@
 #snippet-player #audio-cc-list .focus {
     border: 1px solid white;
     border-width: 100%;
-}
-#snippet-player #controles::after,#snippet-player #controles::before{
-    transition: .3s;
+} /*
+#snippet-player #controles::after,
+#snippet-player #controles::before {
+    transition: 0.3s;
     position: absolute;
-    content: '';
+    content: "";
     width: 100%;
     box-shadow: 0 0 68px 73px black;
     z-index: -1;
+}*/
+#snippet-player #controles::after {
+    bottom: 0;
 }
-#snippet-player #controles::after{bottom: 0;}
