--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ body {
 }
 #snippet-movie-list ,#snippet-serie-list {
 	transition: .3s;
-	position: absolute;
+	position: fixed;
 	top: 50vh;
 	width: calc( 100vw - 4rem);
 	margin-left: 4rem;
@@ -147,7 +147,7 @@ body {
 #snippet-movie-details , #snippet-serie-details{
 	top: 50%;
 	left: 4rem;
-	position: absolute;
+	position: fixed;
 	display: flex;
 	flex-direction: column;
 	z-index: 2;
