--- a/css/movie.css
+++ b/css/movie.css
@@ -12,3 +12,13 @@
     font-weight: 600;
     font-size: 14px;
 }
+div.shadow{
+    position: absolute;
+    background-color: rgba( 21, 25, 33,0.4);
+    box-shadow: 0 0 75px 100px rgba(21,25,33,0.4) !important;
+    width: 37%;
+    height: 60vh;
+    left: 6rem;
+    top: 6rem;
+    z-index: 1;
+}
