--- a/css/series.css
+++ b/css/series.css
@@ -1,17 +1,21 @@
 #scene-serie #snippet-serie-episodes{
-    min-width: 240px !important;
-    background-color: rgb(37,47,71);
-    z-index: 2;
-    position: absolute;
+    background-color: rgba(37,47,71,0.7);
+    z-index: 102 !important;
+    min-width: 30vw !important;
+    width: unset !important;
+    height: 100vh !important;
     border-radius: 5px;
-    top: 25vh;
     font-size: large;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: unset;
 }
 #scene-serie #snippet-serie-episodes h6{
     text-align: center;
     padding: .5rem 0;
     font-size: large;
-    background-color: rgb(159,12,51);
+    background-color: rgba(159,12,51,0.7);
     border-radius: 5px;
 }
 #scene-serie #snippet-serie-episodes ul{
