--- a/css/subtitles.css
+++ b/css/subtitles.css
@@ -1,17 +1,21 @@
 .show_details{
-    background-color: rgb(37,47,71);
-    z-index: 2 !important;
-    min-width: 200px !important;
+    background-color: rgba(37,47,71,0.7);
+    z-index: 102 !important;
+    min-width: 30vw !important;
     width: unset !important;
-    height: unset !important;
+    height: 100vh !important;
     border-radius: 5px;
     font-size: large;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: none;
 }
 .show_details h6{
     text-align: center;
     padding: .5rem 0;
     font-size: large;
-    background-color: rgb(159,12,51);
+    background-color: rgba(159,12,51,0.7);
     border-radius: 5px;
     width: 100%;
 }
