--- a/css/series.css
+++ b/css/series.css
@@ -1,4 +1,4 @@
-#scene-serie #snippet-serie-episodes{
+#scene-serie #snippet-serie-saisons{
     background-color: rgba(37,47,71,0.7);
     z-index: 102 !important;
     min-width: 30vw !important;
@@ -11,25 +11,25 @@
     right: 0;
     left: unset;
 }
-#scene-serie #snippet-serie-episodes h6{
+#scene-serie #snippet-serie-saisons h6{
     text-align: center;
     padding: .5rem 0;
     font-size: large;
     background-color: rgba(159,12,51,0.7);
     border-radius: 5px;
 }
-#scene-serie #snippet-serie-episodes ul{
+#scene-serie #snippet-serie-saisons ul{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0;
 }
-#scene-serie #snippet-serie-episodes ul li{
+#scene-serie #snippet-serie-saisons ul li{
     padding: .25rem .75rem;
     width: 100%;
     
 }
-#scene-serie #snippet-serie-episodes ul li.focus{
+#scene-serie #snippet-serie-saisons ul li.focus{
     background-color: white;
     color: rgb(37,47,71);
 }
