--- a/css/series.css
+++ b/css/series.css
@@ -1,33 +1,25 @@
 #scene-serie #snippet-serie-saisons{
-    background-color: rgba(37,47,71,0.7);
+    background-color: rgba(37,47,71,0.4);
     z-index: 102 !important;
-    min-width: 30vw !important;
-    width: unset !important;
-    height: 100vh !important;
+    max-width: 30vw !important;
+    width: 240px !important;
+    height: fit-content !important;
     border-radius: 5px;
     font-size: large;
     position: absolute;
-    top: 0;
-    right: 0;
-    left: unset;
-}
-#scene-serie #snippet-serie-saisons h6{
-    text-align: center;
-    padding: .5rem 0;
-    font-size: large;
-    background-color: rgba(159,12,51,0.7);
-    border-radius: 5px;
+    left: 30vw !important;
 }
 #scene-serie #snippet-serie-saisons ul{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0;
+    margin-bottom: 0;
 }
 #scene-serie #snippet-serie-saisons ul li{
     padding: .25rem .75rem;
     width: 100%;
-    
+    border-radius: 5px;
 }
 #scene-serie #snippet-serie-saisons ul li.focus{
     background-color: white;
